# docker_usage

./: .env.sample  README.md  pyproject.toml
config/: services.py  settings.py  tasks.py  urls.py
habit_tracker/: models.py  paginators.py  permissions.py  serializers.py  tests.py  urls.py  views.py
habit_tracker/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_award.py  0004_alter_habit_owner.py  0005_habit_created_on.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_telegram_id.py  0003_alter_user_telegram_id.py
